<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#ffd9d9d9"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="6dp"
        card_view:cardElevation="6dp">

        <TextView android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8.5dp"
            android:paddingBottom="8.5dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="#de000000"
            android:fontFamily="sans-serif-medium"
            android:text="@string/randomNumberButtonLabel" />

    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/andLabelText"
        android:textSize="50sp"
        android:id="@+id/upperLimitLabel"
        android:textIsSelectable="false"
        android:textAlignment="center"
        android:singleLine="true"
        android:textStyle="bold"
        android:textColor="@color/abc_search_url_text"
        android:layout_below="@+id/lowerLimitEntryBox"
        android:layout_alignEnd="@+id/lowerLimitEntryBox"
        android:layout_alignParentStart="true"
        android:background="@color/abc_input_method_navigation_guard" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/upperLimitEntryBox"
        android:text="@string/positive100"
        android:textSize="40sp"
        android:textStyle="italic"
        android:textColor="@android:color/holo_orange_dark"
        android:typeface="monospace"
        android:background="@color/abc_input_method_navigation_guard"
        android:editable="true"
        android:textAlignment="center"
        android:layout_below="@+id/upperLimitLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/lowerLimitEntryBox"
        android:text="@string/negative100"
        android:textSize="40sp"
        android:textColor="@android:color/holo_orange_dark"
        android:singleLine="false"
        android:typeface="monospace"
        android:textStyle="italic"
        android:background="@color/abc_input_method_navigation_guard"
        android:editable="true"
        android:textAlignment="center"
        android:hapticFeedbackEnabled="false"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lowerLimitLabel"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomNumberButtonLabel"
        android:id="@+id/generateButton"
        android:enabled="true"
        android:textSize="65sp"
        android:background="@color/abc_input_method_navigation_guard"
        android:textColor="@color/abc_search_url_text"
        android:ellipsize="middle"
        android:hapticFeedbackEnabled="true"
        android:longClickable="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/betweenLabelText"
        android:textSize="50sp"
        android:id="@+id/lowerLimitLabel"
        android:textIsSelectable="false"
        android:textAlignment="center"
        android:singleLine="true"
        android:textStyle="bold"
        android:autoText="false"
        android:background="@color/abc_input_method_navigation_guard"
        android:textColor="@color/abc_search_url_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:id="@+id/randomNumber"
        android:textIsSelectable="false"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:visibility="visible"
        android:textColor="@android:color/holo_orange_dark"
        android:autoText="false"
        android:typeface="monospace"
        android:lines="1"
        android:singleLine="true"
        android:layout_above="@+id/generateButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/upperLimitEntryBox" />

</RelativeLayout>
